# aula07_bootcamp

./: cliente.py  pyproject.toml
