[project]
name = "aula07-bootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcelo Vasselai",email = "mvasselai@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.11.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "aula07_bootcamp", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
